@@ -1,7 +1,10 @@
+# Non-standard (but accepted) comment
+; standard ini comment
 
 [check_mysql]
 username=operator
-password=secret		# Remember to change later
+; comment in the middle
+password=secret  
 
 [section_twice]
 foo=bar
